src/definitions/elements/step.less
/*!
 * # Semantic UI - Step
 * http://github.com/semantic-org/semantic-ui/
 *
 *
 * Released under the MIT license
 * http://opensource.org/licenses/MIT
 *
 */


/*******************************
             Step
*******************************/

/*--------------
   Load Theme
---------------*/

@type    : 'element';
@element : 'step';

@import (multiple) '../../theme.config';

/*******************************
            Plural
*******************************/

.ui.steps {
  display: inline-flex;
  flex-direction: row;
  align-items: stretch;
  margin: @stepMargin;
  background: @stepsBackground;
  box-shadow: @stepsBoxShadow;
  line-height: @lineHeight;
  border-radius: @stepsBorderRadius;
  border: @stepsBorder;
}

/* First Steps */
.ui.steps:first-child {
  margin-top: 0;
}

/* Last Steps */
.ui.steps:last-child {
  margin-bottom: 0;
}


/*******************************
           Singular
*******************************/

.ui.steps .step {
  position: relative;
  display: flex;
  flex: 1 0 auto;
  flex-wrap: wrap;
  flex-direction: row;
  vertical-align: middle;
  align-items: center;
  justify-content: @justifyContent;

  margin: @verticalMargin @horizontalMargin;
  padding: @verticalPadding @horizontalPadding;
  background: @background;
  color: @textColor;
  box-shadow: @boxShadow;
  border-radius: @borderRadius;
  border: @border;
  border-right: @divider;
  transition: @transition;
}

/* Arrow */
.ui.steps .step:after {
  display: none;
  position: absolute;
  z-index: 2;
  content: '';
  top: @arrowTopOffset;
  right: @arrowRightOffset;
  border: medium none;
  background-color: @arrowBackgroundColor;
  width: @arrowSize;
  height: @arrowSize;

  border-style: solid;
  border-color: @borderColor;
  border-width: @arrowBorderWidth;

  transition: @transition;
  transform: translateY(-50%) translateX(50%) rotate(-45deg);
}

/* First Step */
.ui.steps .step:first-child {
  padding-left: @horizontalPadding;
  border-radius: @stepsBorderRadius 0 0 @stepsBorderRadius;
}

/* Last Step */
.ui.steps .step:last-child {
  border-radius: 0 @stepsBorderRadius @stepsBorderRadius 0;
  border-right: none;
  margin-right: 0;
}

/* Only Step */
.ui.steps .step:only-child {
  border-radius: @stepsBorderRadius;
}


/*******************************
            Content
*******************************/

/* Title */
.ui.steps .step .title {
  font-family: @titleFontFamily;
  font-size: @titleFontSize;
  font-weight: @titleFontWeight;
}
.ui.steps .step > .title {
  width: 100%;
}

/* Description */
.ui.steps .step .description {
  font-weight: @descriptionFontWeight;
  font-size: @descriptionFontSize;
  color: @descriptionColor;
}
.ui.steps .step > .description {
  width: 100%;
}
.ui.steps .step .title ~ .description {
  margin-top: @descriptionDistance;
}

/* Icon */
.ui.steps .step > .icon {
  line-height: 1;
  font-size: @iconSize;
  margin: 0 @iconDistance 0 0;
}
.ui.steps .step > .icon,
.ui.steps .step > .icon ~ .content {
  display: block;
  flex: 0 1 auto;
  align-self: @iconAlign;
}

/* Horizontal Icon */
.ui.steps:not(.vertical) .step > .icon {
  width: auto;
}

/* Link */
.ui.steps .link.step,
.ui.steps a.step {
  cursor: pointer;
}

/*******************************
            Types
*******************************/

/*--------------
     Ordered
---------------*/

.ui.ordered.steps {
  counter-reset: ordered;
}
.ui.ordered.steps .step:before {
  display: block;
  position: static;
  text-align: center;
  content: counter(ordered);
  align-self: @iconAlign;
  margin-right: @iconDistance;
  font-size: @iconSize;
  counter-increment: ordered;
  font-family: @orderedFontFamily;
  font-weight: @orderedFontWeight;
}

.ui.ordered.steps .step > * {
  display: block;
  align-self: @iconAlign;
}


/*--------------
    Vertical
---------------*/

.ui.vertical.steps {
  display: inline-flex;
  flex-direction: column;
  overflow: visible;
}
.ui.vertical.steps .step {
  justify-content: flex-start;
  border-radius: @borderRadius;
  padding: @verticalPadding @horizontalPadding;
  border-right: none;
  border-bottom: @verticalDivider;
}
.ui.vertical.steps .step:first-child {
  padding: @verticalPadding @horizontalPadding;
  border-radius: @stepsBorderRadius @stepsBorderRadius 0 0;
}
.ui.vertical.steps .step:last-child {
  border-bottom: none;
  border-radius: 0 0 @stepsBorderRadius @stepsBorderRadius;
}
.ui.vertical.steps .step:only-child {
  border-radius: @stepsBorderRadius;
}


/* Arrow */
.ui.vertical.steps .step:after {
  top: @verticalArrowTopOffset;
  right: @verticalArrowRightOffset;
  border-width: @verticalArrowBorderWidth;
  display: @verticalArrowDisplay;
}

.ui.vertical.steps .active.step:after {
  display: @verticalActiveArrowDisplay;
}
.ui.vertical.steps .step:last-child:after {
  display: @verticalLastArrowDisplay;
}
.ui.vertical.steps .active.step:last-child:after {
  display: @verticalActiveLastArrowDisplay;
}


/*---------------
    Responsive
----------------*/

/* Mobile (Default) */
@media only screen and (max-width: (@largestMobileScreen)) {

  .ui.steps:not(.unstackable) {
    display: inline-flex;
    overflow: visible;
    flex-direction: column;
  }
  .ui.steps:not(.unstackable) .step {
    width: 100% !important;
    flex-direction: column;
    border-radius: @borderRadius;
    padding: @verticalPadding @horizontalPadding;
  }
  .ui.steps:not(.unstackable) .step:first-child {
    padding: @verticalPadding @horizontalPadding;
    border-radius: @stepsBorderRadius @stepsBorderRadius 0 0;
  }
  .ui.steps:not(.unstackable) .step:last-child {
    border-radius: 0 0 @stepsBorderRadius @stepsBorderRadius;
  }

  /* Arrow */
  .ui.steps:not(.unstackable) .step:after {
    display: none !important;
  }

  /* Content */
  .ui.steps:not(.unstackable) .step .content {
    text-align: center;
  }

  /* Icon */
  .ui.steps:not(.unstackable) .step > .icon,
  .ui.ordered.steps:not(.unstackable) .step:before {
    margin: 0 0 @mobileIconDistance 0;
  }

}
/* ... */

